[package]
name = "org-syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
uid = "0.1.7"
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = "1.0.145"
serde_json = "1.0.85"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4"
clap = { version = "4.0.17", features = ["derive"] }
async-trait = "0.1"
notify = "5.0.0"
sled = "0.34.7"
void = "1.0.2"
